# gql

./: .gitignore  CMakeLists.txt  readme.md
example/: basic_window.cpp  hello_triangle.cpp  imgui_non_docking.cpp  keyboard_input.cpp  mouse_input.cpp
example/data/: triangle.frag  triangle.vert
gql/: event.h  gl.h  imgui.h  window.cpp  window.h
